# DS-Cinema

./: .gitignore  README.md  demo_p2p.py  pyproject.toml
src/common/: models.py  protocol.py
src/nameserver/: main.py  server.py
src/node/: algorithm.py  gui.py  main.py  peer.py
tests/: test_clock.py  test_nameserver_logic.py  test_protocol.py  test_race_simulation.py
