[project]
name = "ds-cinema"
version = "0.1.0"
description = "Distributed Seat Reservation System with Lamport Clocks"
authors = [
    {name = "luca.cantagallo",email = "luca.cantagallo99@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=25.12.0,<26.0.0)"
]
